test/visibility/private/iters/accessSibling.good
accessSibling.chpl:11: In function 'main':
accessSibling.chpl:12: error: cannot access 'foo' as it is private to 'M1'
